@@ -59,6 +59,7 @@ Version 1.3.1+svn:
    * hit=yes in anim is now an alias of hit=hit,kill instead of hit=hit
      this should fix the sliding bug and fix more bugs than it creates
    * friendlier boolean matching for unit [filter] and unit [wml_filter]
+   * fixed [special_filter] not working properly (#8212)
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
